Changed the title:

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="superheader">
       <div class="superheader-content">
-        Here is the SUPERHEADER CONTENT
+        SEAN ZELDA
       </div>
     </div>
     <div class="container">
