Changed some text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="column-one">
         <div class="header">
-          Welcome
+          Hello!
         </div>
         <div class="body">
           Lorem ipsum dolor sit amet, soleat aperiri aliquid at sea, est reque labores iudicabit eu, eu his suas ferri corrumpit. At diam alia eripuit vel, fugit meliore gloriatur ex vel. Laudem altera probatus duo an. Eu persecuti delicatissimi per, pro atqui soleat in, vim intellegat interesset persequeris ne. Ei sale novum perfecto eum, case erroribus consectetuer mel te.
