--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="superheader">
       <div class="superheader-content">
-        SEAN ZELDA
+        <img src="img/gallery/Sean_Jordan_Jamming.JPG"/>
       </div>
     </div>
     <div class="container">
@@ -18,13 +18,13 @@
         <div class="body">
           Lorem ipsum dolor sit amet, soleat aperiri aliquid at sea, est reque labores iudicabit eu, eu his suas ferri corrumpit. At diam alia eripuit vel, fugit meliore gloriatur ex vel. Laudem altera probatus duo an. Eu persecuti delicatissimi per, pro atqui soleat in, vim intellegat interesset persequeris ne. Ei sale novum perfecto eum, case erroribus consectetuer mel te.
 
-Sit enim hinc habeo ad. Ei sumo choro mei, et mei soleat libris feugiat, has id inermis invidunt insolens. Te elit animal explicari nam. Ex munere regione omittantur eum. Pri ne legendos interpretaris, pro alii tantas regione eu, iracundia aliquando reformidans ex cum.
+          Sit enim hinc habeo ad. Ei sumo choro mei, et mei soleat libris feugiat, has id inermis invidunt insolens. Te elit animal explicari nam. Ex munere regione omittantur eum. Pri ne legendos interpretaris, pro alii tantas regione eu, iracundia aliquando reformidans ex cum.
 
-Ei graece menandri senserit quo. Qui graeco temporibus ea. Sed an fugit aperiam. Mea quas etiam eu, ut elitr facilis detracto eam.
+          Ei graece menandri senserit quo. Qui graeco temporibus ea. Sed an fugit aperiam. Mea quas etiam eu, ut elitr facilis detracto eam.
 
-Omnis prompta in cum, feugiat efficiantur no duo. Cum in nominati gloriatur, ludus meliore has cu. Nec an tale vivendo. Vix an graeci veritus mnesarchum. Numquam maiorum laboramus ne vim. Maiorum invenire has ex.
+          Omnis prompta in cum, feugiat efficiantur no duo. Cum in nominati gloriatur, ludus meliore has cu. Nec an tale vivendo. Vix an graeci veritus mnesarchum. Numquam maiorum laboramus ne vim. Maiorum invenire has ex.
 
-Aliquid laboramus voluptatibus ex eam, ad possim reformidans mel, accumsan oportere expetendis eos an. Usu no sonet mollis vituperatoribus, zril officiis cu mel, duo an tale eloquentiam consectetuer. Eum dolorem suavitate cu. Nullam feugiat dolores no quo. Id est voluptaria dissentiunt.
+          Aliquid laboramus voluptatibus ex eam, ad possim reformidans mel, accumsan oportere expetendis eos an. Usu no sonet mollis vituperatoribus, zril officiis cu mel, duo an tale eloquentiam consectetuer. Eum dolorem suavitate cu. Nullam feugiat dolores no quo. Id est voluptaria dissentiunt.
         </div>
       </div>
       <div class="column-two">
