--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <body>
     <div class="superheader">
       <div class="superheader-content">
-        <img src="img/gallery/Sean_Jordan_Jamming.JPG"/>
+        <img src="img/IMG_0012.jpg">
+        <div class="title">Sean Zelda | Content Writer | Musician
+        </div>
       </div>
     </div>
     <div class="container">
       <div class="column-one">
         <div class="header">
-          Hello!
+          Sometimes B&#9839; | Never B&#9837; | Always B&#9838;
         </div>
         <div class="body">
           Lorem ipsum dolor sit amet, soleat aperiri aliquid at sea, est reque labores iudicabit eu, eu his suas ferri corrumpit. At diam alia eripuit vel, fugit meliore gloriatur ex vel. Laudem altera probatus duo an. Eu persecuti delicatissimi per, pro atqui soleat in, vim intellegat interesset persequeris ne. Ei sale novum perfecto eum, case erroribus consectetuer mel te.
@@ -29,15 +31,17 @@
       </div>
       <div class="column-two">
         <div class="row-one">
-          This is row one.
+          <h1><a href="/music">MUSIC</a></h1>
+           <p>Sean has been writing music since he was 10 years old. He composes all the instrumentals, from guitars to piano, from drums to string ensembles. He has had the pleasure of working with countless musicians, each one bringing a fresh perspective and interpretation to Sean's original compositions.</p>
         </div>
         <div class="row-two">
-          This is row two.
+          <h1><a href="/writing">WRITING</a></h1>
+          <p>As an English major at the University of Michigan, Sean wrote many nonfiction essays, thoughtful poems and exciting short stories. In 2014, Sean was nominated for the Granader Family Prize for Excellence in Upper - Level Writing in nonfiction category.</p>
         </div>
       </div>
       <div class="floating-action-button">
         <a href="http://www.c21aaanorth.com">
-        SHARE
+        CONTENT
         </a>
       </div>
     </div>
