--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <div class="superheader">
       <div class="superheader-content">
         <img src="img/IMG_0012.jpg">
-        <div class="title">Sean Zelda | Content Writer | Musician
+          <div class="title">Sean Zelda | Content Writer | Musician<br>Web Developer in Training
+          <div class="navigation"><a href="/home">home</a>&nbsp;|&nbsp;<a href="/music">
+          music</a>&nbsp;|&nbsp;<a href="/writing">writing</a>&nbsp;|&nbsp;<a href="/contact">contact</a>
+          </div>
         </div>
       </div>
     </div>
@@ -33,10 +36,14 @@
         <div class="row-one">
           <h1><a href="/music">MUSIC</a></h1>
            <p>Sean has been writing music since he was 10 years old. He composes all the instrumentals, from guitars to piano, from drums to string ensembles. He has had the pleasure of working with countless musicians, each one bringing a fresh perspective and interpretation to Sean's original compositions.</p>
+           <div class="see-more"><a href="music">See more...</a>
+         </div>
         </div>
         <div class="row-two">
           <h1><a href="/writing">WRITING</a></h1>
-          <p>As an English major at the University of Michigan, Sean wrote many nonfiction essays, thoughtful poems and exciting short stories. In 2014, Sean was nominated for the Granader Family Prize for Excellence in Upper - Level Writing in nonfiction category.</p>
+          <p>As an English major at the University of Michigan, Sean wrote many nonfiction essays, poems and short stories. In 2014, Sean was nominated for the Granader Family Prize for Excellence in Upper-Level Writing in nonfiction category. He is now a content writer for a well-known real estate company.</p>
+          <div class="see-more"><a href="/writing">See more...</a>
+          </div>
         </div>
       </div>
       <div class="floating-action-button">
